[gd_scene load_steps=8 format=2]

[ext_resource path="res://Music/Gary's House.mp3" type="AudioStream" id=1]
[ext_resource path="res://Misc/Music.gd" type="Script" id=2]
[ext_resource path="res://Music/Cherry Trail.mp3" type="AudioStream" id=3]
[ext_resource path="res://Misc/MusicPlayer.gd" type="Script" id=4]
[ext_resource path="res://Music/Pivot Town.wav" type="AudioStream" id=5]
[ext_resource path="res://Music/Kugi Canyon.wav" type="AudioStream" id=6]
[ext_resource path="res://Music/Berry Lake.wav" type="AudioStream" id=7]

[node name="Music" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Garys_House" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -0.5

[node name="Cherry_Trail" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
script = ExtResource( 4 )
end_time = 134.5
loop_time = 67.73

[node name="Pivot_Town" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.0
script = ExtResource( 4 )
end_time = 139.5
loop_time = 88.8

[node name="Kugi_Canyon" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -9.0
script = ExtResource( 4 )
end_time = 70.0

[node name="Berry_Lake" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -9.0
script = ExtResource( 4 )
end_time = 190.5
loop_time = 94.7
